--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,12 +5,9 @@
 @import "./services.scss";
 @import "./footer.scss";
 @import "./burger-menu.scss";
+@import "./services-page.scss";
 
-// @font-face {
-//   font-family: "Lato", sans-serif;
-//   src: url("../assets/fonts/Lato-Regular.ttf") format("truetype");
-//   // font-weight: 400;
-// }
+
 
 @font-face {
   font-family: "Montserrat", sans-serif;
