--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -1,59 +1,60 @@
 .intro {
-  padding: 108px 16px 0 16px;
+  padding: 30px 32px 0 32px;
   position: relative;
 
   &-wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    height: 452px;
   }
-  &-description {
-    padding-left: 30px;
+  &-right {
+    padding: 123px 0 0 32px;
   }
   &-title {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
-    // font-size: 44px;
-    font-size: clamp(28px, 4vw, 44px);
-    // line-height: 54px;
+    font-size: clamp(22px, 4vw, 44px);
     line-height: clamp(34px, 4vw, 54px);
-    letter-spacing: 2px;
     text-transform: uppercase;
     color: #282c37;
-    // margin-bottom: 4px;
+    margin-top: 57px;
+    margin-bottom: 6px;
   }
   &-subtitle {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
-    // font-size: 30px;
     font-size: clamp(18px, 2vw, 30px);
-    // line-height: 37px;
     line-height: clamp(22px, 2vw, 37px);
-    letter-spacing: 2px;
     text-transform: uppercase;
     color: #282c37;
-    margin-bottom: 19px;
+    margin-bottom: 25px;
   }
   &-text {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: clamp(14px, 2vw, 22px);
     line-height: clamp(17px, 2vw, 26px);
-    // max-width: 475px;
-    margin-bottom: 32px;
+    color: #282c37;
+    max-width: 427px;
+    margin-bottom: 31px;
   }
-
   &-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-
     width: 264px;
     height: 48px;
     background: #47cf34;
     border-radius: 8px;
     border: none;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      background: #30b01e;
+    }
 
     font-family: "Montserrat", sans-serif;
     font-style: normal;
@@ -62,57 +63,347 @@
     line-height: 20px;
     text-align: center;
     text-transform: uppercase;
-
     color: #ffffff;
   }
-  &-cube {
-    flex: 1;
-    max-width: 467px;
-    margin-bottom: 13px;
+  &-arrowdown {
+    display: none;
   }
-  &-cube img {
+  &-left {
+    max-width: 468px;
+    flex-shrink: 1;
+    padding-top: 68px;
+  }
+  &-left img {
     width: 100%;
   }
-  &-line1 img {
+
+  &-line1 {
     position: absolute;
-    // max-width: 654px;
     width: 45vw;
-    bottom: 67%;
-    left: 25%;
+    bottom: 66%;
+    right: 30%;
+
+    z-index: -1;
+  }
+  &-line1 img {
+    width: 100%;
   }
   &-rhomb {
     position: absolute;
-    bottom: 50%;
+    bottom: 49%;
     z-index: -1;
   }
   &-rhomb img {
     width: 100%;
   }
-  &-line2 img {
+  &-line2 {
     position: absolute;
-    bottom: -23%;
+    top: 87%;
     left: 25%;
+    width: 42vw;
+    z-index: -1;
+  }
+  &-line2 img {
+    width: 100%;
+  }
+
+  &-line1_small,
+  &-line2_small {
+    display: none;
   }
 }
 
 @media screen and (max-width: 992px) {
   .intro {
-    padding: 45px 32px 0 32px;
+    &-subtitle {
+      margin-bottom: 5px;
+    }
+    &-text {
+      max-width: 350px;
+      margin-bottom: 15px;
+    }
+    &-left {
+      width: 260px;
+      padding-top: 5px;
+    }
+    &-line1,
+    &-line2 {
+      display: none;
+    }
+    &-line1_small,
+    &-line2_small {
+      display: block;
+    }
+    &-right {
+      padding: 28px 0 0 38px;
+    }
+    &-line1 {
+      bottom: 62%;
+      right: 25%;
+      width: unset;
+    }
+    &-line2 {
+      width: unset;
+      top: 99%;
+      left: 25%;
+    }
+    &-rhomb {
+      bottom: 38%;
+      left: 6%;
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
     &-wrapper {
+      flex-direction: column-reverse;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    &-right {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+    }
+    &-left {
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 336px;
+      padding-top: 15px;
+    }
+    &-btn {
+      margin-bottom: 58px;
+    }
+    &-arrowdown {
+      display: inline-block;
     }
     &-text {
-      width: 300px;
+      max-width: unset;
     }
-    &-cube {
-      width: 259px;
-      margin-bottom: 13px;
+    &-line1 {
+      display: none;
     }
-    &-line1 img {
-      width: 45vw;
+    &-rhomb {
+      display: none;
+    }
+    &-line2 {
+      display: none;
+    }
+
+    &-line1_small,
+    &-line2_small {
+      display: none;
     }
   }
+}
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.35);
+  top: 0;
+  left: 0;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+
+  &-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
+  }
+
+  &-content {
+    padding: 172px 41px 60px 42px;
+    background: #ffffff;
+    border-radius: 4px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &-close {
+    position: absolute;
+    top: 18px;
+    left: 22px;
+    cursor: pointer;
+  }
+
+  &-form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    gap: 23px;
+    flex: 1;
+  }
+
+  &-name {
+    border: 1px solid #282c37;
+    border-radius: 8px;
+    width: 292px;
+    height: 50px;
+    padding: 14px 0 14px 21px;
+  }
+  &-name::placeholder {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #9fa7b0;
+  }
+  &-email {
+    border: 1px solid #282c37;
+    border-radius: 8px;
+    width: 292px;
+    height: 50px;
+    padding: 14px 0 14px 21px;
+  }
+  &-email::placeholder {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #9fa7b0;
+  }
+
+  &-text {
+    padding: 14px 23px 0 21px;
+    width: 292px;
+
+    border: 1px solid #282c37;
+    border-radius: 8px;
+    resize: none;
+  }
+
+  &-text::placeholder {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+
+    color: #9fa7b0;
+  }
+
+  &-submit {
+    width: 292px;
+    height: 48px;
+    background: #47cf34;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 37px;
+  }
+
+  h3 {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #282c37;
+    margin-bottom: 34px;
+  }
+
+  &-warning-name {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #cf4747;
+    padding-left: 10px;
+    display: none;
+    height: 0;
+  }
+  &-warning-email {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #cf4747;
+    padding-left: 10px;
+    display: none;
+    height: 0;
+  }
+  &-warning-text {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #cf4747;
+    padding-left: 10px;
+    display: none;
+    height: 0;
+  }
+  &-success {
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #30b01e;
+    width: 248px;
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: unset;
+    height: unset;
+
+    &-body {
+      margin: 0;
+      height: 100%;
+      display: block;
+    }
+
+    &-content {
+      height: 100%;
+    }
+  }
+}
+
+.error {
+  border: 1px solid #cf4747;
+}
+.warning {
+  display: block;
+}
+
+.success {
+  opacity: 1;
+  visibility: visible;
 }
