--- a/src/styles/services-page.scss
+++ b/src/styles/services-page.scss
@@ -1,35 +1,83 @@
 .marketing {
+  &-bg {
+    position: absolute;
+    top: 15%;
+    right: 0;
+    z-index: -1;
+  }
+
   &-title {
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 44px;
-    line-height: 54px;
+    font-size: clamp(22px, 4vw, 44px);
+    line-height: clamp(24px, 4vw, 54px);
     color: #282c37;
 
-    margin-bottom: 33px;
+    margin-bottom: 32px;
     width: 85%;
   }
   &-items {
     display: flex;
     flex-direction: column;
-    gap: 17px;
+    gap: 12px;
+    margin-left: 43px;
+    margin-bottom: 71px;
   }
   &-item {
     display: flex;
     gap: 41px;
+
+    p {
+      font-family: "Roboto", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 20px;
+      color: #282c37;
+    }
+  }
+
+  &-description {
+    h3 {
+      font-family: "Montserrat", sans-serif;
+      font-style: normal;
+      font-weight: 700;
+      font-size: clamp(22px, 4vw, 30px);
+      line-height: clamp(24px, 4vw, 37px);
+      color: #282c37;
+      margin-bottom: 36px;
+    }
+    p {
+      font-family: "Lato", sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 22px;
+      color: #000000;
+      width: 97%;
+
+      a {
+        color: #5391dc;
+        text-decoration: none;
+      }
+    }
   }
 
   &-mainStages {
-    // list-style-image: url('../assets/svg/marketing-cube.svg');
-    // margin-right: 41px;
     position: relative;
     list-style: none;
-    margin-left: 0;
-    padding-left: 40px;
+    margin-left: 77px;
+    padding-left: 31px;
     display: flex;
     flex-direction: column;
     gap: 17px;
+
+    li {
+      font-size: 17px;
+      line-height: 20px;
+      color: #282c37;
+    }
   }
   &-mainStages li:before {
     content: url("../assets/svg/dot.svg");
@@ -43,31 +91,78 @@
     flex-direction: column;
     justify-content: center;
     gap: 23px;
-
+    margin: 164px 0 94px 0;
+    padding: 0 56px 0 56px;
+    flex: 1;
+    background-color: #fff;
     max-width: 643px;
     height: 349px;
     box-shadow: (4px 4px 20px rgba(40, 44, 55, 0.2));
     border-radius: 20px;
+  }
 
-    input {
-      background: #ffffff;
-      border: 1px solid #9fa7b0;
-      border-radius: 8px;
-      width: 530px;
-      height: 50px;
-      padding: 14px 0 14px 21px;
-    }
-    input::placeholder {
-      font-family: "Lato", sans-serif;
-      font-style: italic;
-      font-weight: 400;
-      font-size: 18px;
-      line-height: 22px;
-      color: #9fa7b0;
-    }
+  &-name {
+    background: #ffffff;
+    border: 1px solid #9fa7b0;
+    border-radius: 8px;
+    width: 100%;
+    height: 50px;
+    padding: 14px 0 14px 21px;
+  }
+
+  &-name::placeholder {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #9fa7b0;
+  }
+  &-email {
+    background: #ffffff;
+    border: 1px solid #9fa7b0;
+    border-radius: 8px;
+    width: 100%;
+    height: 50px;
+    padding: 14px 0 14px 21px;
+  }
+
+  &-email::placeholder {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #9fa7b0;
+  }
+
+  &-warning-name {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #cf4747;
+    padding-left: 10px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  &-warning-email {
+    font-family: "Lato", sans-serif;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #cf4747;
+    padding-left: 10px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .div {
+    width: 100%;
   }
   &-btn {
-    width: 530px;
+    width: 100%;
     height: 48px;
     background: #47cf34;
     border: none;
@@ -81,5 +176,66 @@
     text-align: center;
     text-transform: uppercase;
     color: #ffffff;
+  }
+}
+.form {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.error {
+  border: 1px solid #cf4747;
+}
+
+.warning {
+  opacity: 1;
+  visibility: visible;
+}
+
+.bottom-bg {
+  position: absolute;
+  top: 16%;
+  right: 7%;
+  z-index: -1;
+}
+.texts {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  gap: 21px;
+  margin-bottom: 37px;
+}
+
+@media screen and (max-width: 1200px) {
+  .marketing {
+    padding: 0 16px 0 16px;
+
+    &-title {
+      width: unset;
+    }
+    &-form {
+      padding: 0 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .marketing {
+    &-bg {
+      display: none;
+    }
+    &-form {
+      margin: 60px 0 30px 0;
+      padding: 0 16px;
+    }
+    &-mainStages {
+      margin-left: 22px;
+    }
+    &-items {
+      margin-left: 12px;
+    }
+    &-item {
+      gap: 22px;
+    }
   }
 }
